# powerbi-pusher

./: .gitignore  README.md  powerbi_interactive_log.txt  pyproject.toml  requirements.txt
src/phaze/: __init__.py  exceptions.py  local_ops.py
src/phaze.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_local_debug.py
